📱 Switch back to Bootstrap Grid to fix layout issues

--- a/themes/dylangore/assets/sass/main.scss
+++ b/themes/dylangore/assets/sass/main.scss
@@ -7,7 +7,7 @@
 // Options
 // $enable-rounded: false;
 // $enable-grid-classes: false;
-$enable-cssgrid: true;
+// $enable-cssgrid: true;
 
 // Theme
 $custom-colors: (
